--- a/fam_copy_wait.html
+++ b/fam_copy_wait.html
@@ -98,7 +98,7 @@
 	<h2>Synopsis</h2>
 	<p class="code">void fam_copy_wait(void *waitObj);</p>
 	<h2>Description</h2>
-	<p>Ensure that copy operation associated with the wait object is completed.</p>
+	<p>The method blocks until the copy operation associated with the wait object is completed.</p>
 	<h2>Input Arguments</h2>
 	<table>
 		<tbody>
@@ -122,7 +122,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>None. Throws Fam_Exception on error.</p>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam error numbers</h2>
 	<table>
 	<tbody>
