--- a/fam_gather.html
+++ b/fam_gather.html
@@ -183,8 +183,8 @@
 	<p>These calls do not return a value on success. At return, the memory pointed to by
 		local contains a copy of the data elements from FAM for the blocking
 		calls. For non-blocking calls, local memory is not guaranteed to
-		contain data until successful completion of a subsequent fam_quiet()
-		call. Both non-blocking and blocking call throws Fam_Exception on
+		contain data until successful completion of a subsequent <code>fam_quiet()</code>
+		call. Both non-blocking and blocking calls throw <code>Fam_Exception</code> on
 		error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
