--- a/fam_get_option.html
+++ b/fam_get_option.html
@@ -116,7 +116,7 @@
 			<tr><td class="code">&quot;VERSION&quot;</td>
 				<td>Version of the current implementation of the OpenFAM API.</td>
 				<td class="code">char*</td>
-				<td class="code">&quot;0.0.1&quot;</td>
+				<td class="code">&quot;2.0&quot;</td>
 			</tr>
 			<tr>
 				<td class="code">
@@ -277,7 +277,7 @@
 	</table>
 	<p>&nbsp;</p>
 	<p>Note: The following options are not supported in current
-		implementation and should not be used. It return the default values.
+		implementation and should not be used, even though they have default values.
 		<code>&quot;DEFAULT_REGION_NAME&quot;</code>, <code>&quot;FAM_THREAD_MODEL&quot;</code> and <code>&quot;FAM_CONTEXT_MODEL&quot;</code></p>
 	<h2>Return Values</h2>
 	<p>A pointer to the value of the option. Throws <code>Fam_Exception</code> on
