--- a/fam_map.html
+++ b/fam_map.html
@@ -141,6 +141,7 @@
 		are managed appropriately. The implementation may limit the FAM size
 		(hence the size of data items) that can be mapped into the processor
 		address space at one time.</p>
+	<p><code>fam_map()</code> and <code>fam_unmap()</code>are currently only supported in the scale-up configuration of the OpenFAM reference implementation.</p>
 	<h2 id="e1">Example</h2>
 <pre>
 #include &lt;string.h>
