--- a/fam_put.html
+++ b/fam_put.html
@@ -151,8 +151,8 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>These calls does not return a value on success; Both non-blocking and blocking call
-		throws Fam_Exception on error.</p>
+	<p>These calls do not return a value on success; Both non-blocking and blocking calls
+		throw <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
