--- a/fam_stat.html
+++ b/fam_stat.html
@@ -120,7 +120,23 @@ typedef struct {
     char *name;
 } Fam_Stat;
 	</pre>
-	
+		<table>
+		<tbody>
+			<tr><th>Name</th><th>Description</th><th>Default Value</th></tr>
+			<tr>
+				<td class="code">key</td><td><span style="color:red;font-weight:bold">TBD</span></td>
+				<td>none</td>
+			</tr>
+			<tr>
+				<td class="code">size</td><td>Size of the region or data item in bytes</td>
+				<td>none</td>
+			</tr>
+			<tr><td class="code">perm</td><td>permissions associated with the region or data item</td><td>none</td></tr>
+			<tr><td class="code">name</td><td>Name of the region or data item.</td>
+				<td>none</td>
+			</tr>
+		</tbody>
+	</table>
 	<h2>Return Values</h2>
 	<p>None. Throws Fam_Exception on error.</p>
 	<h2>Fam Error Numbers</h2>
