--- a/fam_swap.html
+++ b/fam_swap.html
@@ -122,7 +122,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>The old value from FAM. Throws Fam_Exception on error.</p>
+	<p>The old value from FAM. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table><tbody>
 	<tr><th>Error</th><th>Description</th></tr>
