--- a/fam_unmap.html
+++ b/fam_unmap.html
@@ -141,7 +141,7 @@
 	</tbody>
 	</table>
 	<h2>Notes</h2>
-	<p>None.</p>
+	<p><code>fam_map()</code> and <code>fam_unmap()</code>are currently only supported in the scale-up configuration of the OpenFAM reference implementation.</p>
 	<h2>Example</h2>
 	<p>See example under <a href="fam_map.html#e1">fam_map</a></p>
 		</article>
