--- a/errors.html
+++ b/errors.html
@@ -103,11 +103,10 @@
 				if no output is returned), and throw an exception on error. Instead
 				of checking the return value for errors as in C, the caller should
 				use try-catch blocks for handling errors.</p>
-			<p>The OpenFAM 2.0 implementation defines a <code>fam exception</code> class, which
+			<p>The OpenFAM 2.0 implementation defines a <code>Fam_Exception</code> class, which
 				is derived from C++ standard exception class. It also defines a list of individual error
-				numbers to categorize various types of failures, such as <code>Runtime</code>, <code>Allocator</code>,
-				<code>Data-path</code>, etc. Individual error numbers identify specific
-				error conditions. The <code>fam exception</code> object received by the caller in case of an
+				numbers to categorize various types of failures. Individual error numbers identify specific
+				error conditions. The <code>Fam_Exception</code> object received by the caller in case of an
 				error contains a specific error number and an appropriate error
 				message string. The application can retrieve this information using
 				member functions, <code>fam_error()</code> and <code>fam_error_msg()/what()</code> and take
@@ -259,7 +258,7 @@
 			<p>However, the non-blocking calls are queued within the library,
 				and may not catch exceptions immediately. Depending on the
 				underlying error, a fam exception will be thrown immediately with specific error number,
-				while others may only be thrown during the next fam_quiet() call.
+				while others may only be thrown during the next <code>fam_quiet()</code> call.
 				Thus the code may look like:</p>
 			<pre>    try {
     	fam_put_nonblocking();
