--- a/fam_copy.html
+++ b/fam_copy.html
@@ -94,13 +94,13 @@
 		</nav>
 		<article>
 			<h1 class="code">openfam::fam::fam_copy</h1>
-	<p>Copy data item from one FAM-resident data item to another FAM-resident data item within a different or same region.</p>
+	<p>Copy data from one FAM-resident data item to another FAM-resident data item.</p>
 	<h2>Synopsis</h2>
 	<p class="code">void *fam_copy(Fam_Descriptor *src, uint64_t srcOffset,
 		Fam_Descriptor *dest, uint64_t destOffset, uint64_t nbytes);</p>
 	<h2>Description</h2>
-	<p>Initiates a copy operation of data item from one FAM-resident data item to another FAM-resident data item and returns a
-		pointer to the wait object associated with this copy operation.</p>
+	<p>Initiates a copy operation of data from one FAM-resident data item to another FAM-resident data item and returns a
+		pointer to the wait object associated with the copy operation.</p>
 	<h2>Input Arguments</h2>
 	<table>
 		<tbody>
@@ -157,8 +157,8 @@
 	</table>
 	<h2>Return Values</h2>
 	<p>Returns a pointer to the wait object for the copy operation.
-		This object is used to wait for the completion of the copy operation.
-		Throws Fam_Exception on error.</p>
+		This object can be used to wait for the completion of the copy operation.
+		Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
@@ -177,7 +177,7 @@
 	<h2>Notes</h2>
 	<p>Note that the method is non-blocking: it returns after the copy
 		has been initiated, and does not wait for completion of the transfer.
-		Also note that fam_copy() performs an inconsistent copy, in that the
+		Also note that <code>fam_copy()</code> performs an inconsistent copy, in that the
 		copied data may reflect updates that are performed concurrently with
 		the copy operation, rather than a point-in-time snapshot of the source
 		data item that is consistent as of the beginning of copy operation. If
