--- a/fam_fetch_add.html
+++ b/fam_fetch_add.html
@@ -115,7 +115,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>The original value from FAM. Throws Fam_Exception on error.</p>
+	<p>The original value from FAM. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table><tbody>
 	<tr><th>Error</th><th>Description</th></tr>
