--- a/fam_fetch_min.html
+++ b/fam_fetch_min.html
@@ -128,7 +128,7 @@
 	</table>
 	<h2>Return Values</h2>
 	<p>The original value from FAM. Throws 
-		Fam_Exception on error.</p>
+		<code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table><tbody>
 	<tr><th>Error</th><th>Description</th></tr>
