--- a/fam_fetch_or.html
+++ b/fam_fetch_or.html
@@ -115,7 +115,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>The old value from FAM. Throws Fam_Exception on
+	<p>The old value from FAM. Throws <code>Fam_Exception</code> on
 		error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table><tbody>
