--- a/fam_quiet.html
+++ b/fam_quiet.html
@@ -104,7 +104,7 @@
 	<h2>Input Arguments</h2>
 	<p>None.</p>
 	<h2>Return Values</h2>
-	<p>None. Throws Fam_Exception on error.</p>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
@@ -119,7 +119,7 @@
 	
 	<h2>Notes</h2>
 	<p>Note that this method does NOT order or wait
-		for completion of fam_map()-enabled load/store accesses by the
+		for completion of <code>fam_map()</code>-enabled load/store accesses by the
 		processor to FAM.</p>
 	<h2>Example</h2>
 <pre>
