--- a/release_notes.html
+++ b/release_notes.html
@@ -97,20 +97,21 @@
 		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
 		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
 		<h2>OpenFAM version 2.0 (release 1)</h2>
-		<p>The current version of OpenFAM is 2.0.</p>
+		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 1.0:</p>
 		<ul>
-			<li>Scalability improvements: Support for a larger pool of memory by scaling to multiple memory servers. See <a href="services.html">services</a> for more details. </li>
+			<li>Scalability improvements: This version supports a larger pool of memory by allowing multiple memory servers to be used. See <a href="services.html">services</a> for more details. </li>
 			<li>Performance improvements: Memory management and metadata operations have been optimized. 
 				<ul>
-					<li>Background worker threads (unused in OpenFAM) were disabled from the memory service.</li>
-					<li>Allocation performance improved by moving the memset operation to zero allocated memory from fam_allocate() to fam_deallocate() path.</li>  
+					<li>Background worker threads (unused in OpenFAM 1.0) were disabled from the memory service.</li>
+					<li>Allocation performance improved by moving the memset operation to zero allocated memory from <code>fam_allocate()</code> to <code>fam_deallocate()</code> path.</li>
+					<li>Regions can span multiple memory servers, thus reducing network bottlenecks when multiple data items within the same region are used.</li>
 				</ul> 
 			</li>
 			<li>OpenFAM APIs changes: 
 				<ul>
 					<li><code>fam_size</code> API has been replaced with <code>fam_stat</code> API.</li>
-					<li><code>fam_copy</code> API has been changed to allow data copies between regions.</li>
-					<li>Unused return type was changed from int to void for the following APIs: <code>fam_initialize,
+					<li><code>fam_copy</code> API has been changed to allow data copies between regions, as well as within a region.</li>
+					<li>The return type was changed from int to void for the following APIs: <code>fam_initialize,
 						fam_resize_region, fam_change_permissions, fam_put_blocking, fam_get_blocking, fam_gather_blocking, fam_scatter_blocking</code>. 
 					<li><code>fam_barrier_all</code> has been added as a supported API.</li>
 				</ul>
@@ -123,7 +124,7 @@
 				<li>Memory allocator models implemented: "Shared memory model" to be used on scale-up platforms and "Memory server model" to be used on scale-out (cluster) platforms.</li>
 				<li>Memory server model uses libfabric and support sockets, verbs and psm providers. </li>
 		</ul>
-		<h1>Documentation updates</h1>
+		<h2>Documentation updates</h2>
 		<ul>
 				<li><a href="v2.0/index.html">OpenFAM version 2.0</a></li>
 				<li><a href="v1.0/index.html">OpenFAM version 1.0</a></li>
