--- a/config_files.html
+++ b/config_files.html
@@ -107,11 +107,11 @@ These configuration files contain the following options.
 <tbody>
 	<tr><th>Configuration Name</th><th>Description</th></tr>
 	<tr><td class="code">memsrv_interface_type</td>
-		<td>Memory Server Interface type used by OpenFAM. Default value is "direct". Other option is "rpc".
+		<td>Memory server interface type used by OpenFAM. Default value is "direct". Other option is "rpc".
 		</td>
 	</tr>
 	<tr><td class="code">metadata_interface_type</td>
-		<td>Metadata Server Interface type used by OpenFAM. Default value is "direct". Other option is "rpc".
+		<td>Metadata server interface type used by OpenFAM. Default value is "direct". Other option is "rpc".
 		</td>
 	</tr>
 	<tr><td class="code">memsrv_list</td>
@@ -244,7 +244,7 @@ Options :
 <p>The configuration options passed to the services using command line arguments take precedence over
 the options present in the respective configuration files.</p>
 <p>Similarly, for the PE, configuration options passed using <code>Fam_Options</code> argument of <a href="fam_initialize.html">fam_initialize</a> API take precedence
-over the options present in fam_pe_config.yaml configuration file. </article>
+over the options present in <code>fam_pe_config.yaml</code> configuration file. </article>
 	</section>
 	<footer>
 		<p>Copyright 2021, Hewlett Packard Enterprise Development Co, LLP</p>
