--- a/fam_change_permissions.html
+++ b/fam_change_permissions.html
@@ -114,7 +114,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>None. Throws Fam_Exception on error.</p>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam error numbers</h2>
 	<table>
 	<tbody>
