--- a/fam_get.html
+++ b/fam_get.html
@@ -167,7 +167,7 @@
 	<p>Upon return, the memory pointed to by local contains a copy of the
 		data in FAM for the blocking call. For the non-blocking call, the
 		memory pointed to by the local pointer is not guaranteed to contain a
-		copy of the data in FAM until after a successful completion of a subsequent 
+		copy of the data in FAM until after successful completion of a subsequent 
 		<code>fam_quiet()</code> call.</p>
 	<h2>Examples</h2>
 <pre>
