--- a/fam_min.html
+++ b/fam_min.html
@@ -141,7 +141,7 @@
 		offset argument must point to the correct value for the data type.
 		Availability of these methods is dependent on hardware support for the
 		operations.</p>
-	<p>A subsequent successful completion of <code>fam_quiet()</code> call ensures the completion of this atomic operation.</p> 
+	<p>Successful completion of a subsequent <code>fam_quiet()</code> call ensures the completion of this atomic operation.</p> 
 	<h2>Example</h2>
 <pre>
 #include &lt;string.h>
