--- a/fam_stat.html
+++ b/fam_stat.html
@@ -110,7 +110,7 @@
 			<tr><td class="code">famInfo</td><td>A pointer to the structure where the information is copied.</td></tr>
 		</tbody>
 	</table>
-	<p>fam_stat() takes a pointer to the Fam_Stat structure as input to copy
+	<p>fam_stat() takes a pointer to the <code>Fam_Stat</code> structure as input to copy
 	 the information associated with region or data item descriptor. </p>
 	<pre>
 typedef struct {
@@ -138,7 +138,7 @@ typedef struct {
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>None. Throws Fam_Exception on error.</p>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
