--- a/fam_unmap.html
+++ b/fam_unmap.html
@@ -124,7 +124,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>None. Throws Fam_Exception on error.</p>
+	<p>None. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
@@ -141,7 +141,7 @@
 	</tbody>
 	</table>
 	<h2>Notes</h2>
-	<p><code>fam_map()</code> and <code>fam_unmap()</code>are currently only supported in the scale-up configuration of the OpenFAM reference implementation.</p>
+	<p><code>fam_map()</code> and <code>fam_unmap()</code>are currently only supported in the scale-up (shared memory) configuration of the OpenFAM reference implementation.</p>
 	<h2>Example</h2>
 	<p>See example under <a href="fam_map.html#e1">fam_map</a></p>
 		</article>
