--- a/fam_lookup.html
+++ b/fam_lookup.html
@@ -111,7 +111,7 @@
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
-	<p>A descriptor to the value in FAM. Throws Fam_Exception on error.</p>
+	<p>A descriptor to the value in FAM. Throws <code>Fam_Exception</code> on error.</p>
 	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
