--- a/release_notes.html
+++ b/release_notes.html
@@ -103,20 +103,20 @@
 			<li>Performance improvements: Memory management and metadata operations have been optimized. 
 				<ul>
 					<li>Background worker threads (unused in OpenFAM 1.0) were disabled from the memory service.</li>
-					<li>Allocation performance improved by moving the memset operation to zero allocated memory from <code>fam_allocate()</code> to <code>fam_deallocate()</code> path.</li>
+					<li>Allocation performance was improved by moving the memset operation to zero allocated memory from <code>fam_allocate()</code> to <code>fam_deallocate()</code> path.</li>
 					<li>Regions can span multiple memory servers, thus reducing network bottlenecks when multiple data items within the same region are used.</li>
 				</ul> 
 			</li>
 			<li>OpenFAM APIs changes: 
 				<ul>
-					<li><code>fam_size</code> API has been replaced with <code>fam_stat</code> API.</li>
-					<li><code>fam_copy</code> API has been changed to allow data copies between regions, as well as within a region.</li>
-					<li>The return type was changed from int to void for the following APIs: <code>fam_initialize,
+					<li><code>fam_size</code> has been replaced with <code>fam_stat</code>.</li>
+					<li><code>fam_copy</code> has been changed to allow data copies between regions, as well as within a region.</li>
+					<li>The return type was changed from <code>int</code> to <code>void</code> for the following APIs: <code>fam_initialize,
 						fam_resize_region, fam_change_permissions, fam_put_blocking, fam_get_blocking, fam_gather_blocking, fam_scatter_blocking</code>. 
 					<li><code>fam_barrier_all</code> has been added as a supported API.</li>
 				</ul>
 			</li>
-			<li>Exception and error handling was simplified. All OpenFAM APIs returns only one exception type on error, i.e, <code>Fam_Exception</code>. </li>
+			<li>Exception and error handling was simplified. All OpenFAM APIs returns only one exception type on error, i.e, <code>Fam_Exception</code>.</li>
 		</ul>
 		<h2>OpenFAM version 1.0 (release 0.4)</h2>
 		<ul>
