minor updates and address comments from Sharad.

--- a/fam_allocate.html
+++ b/fam_allocate.html
@@ -114,8 +114,7 @@
 			<tr><td class="code">accessPermissions</td><td>Access permissions for this data item.</td></tr>
 			<tr><td class="code">region</td><td>
 					Descriptor for the region where the data item is being
-						created. If null, the default specified during fam_initialize() is
-						used.<span style="color:red;font-weight:bold">Is this true? <code>fam_initialize</code> says that default region name is not used. Do we still have a default region?</span></td></tr>
+					created.</td></tr>
 		</tbody>
 	</table>
 	<p>&nbsp;</p>
