--- a/fam_destroy_region.html
+++ b/fam_destroy_region.html
@@ -126,8 +126,8 @@
 	<p>If a region is destroyed, all data items in it are also
 		destroyed. If descriptors to the region or the contained data items
 		are subsequently used, the behavior of the library is implementation
-		dependent. <span style="color:red; font-weight:bold">Note that this call will trigger a delayed free operation,
-		to permit other PEs currently using the region to finish.</span></p>
+		dependent. Note that this call will trigger a delayed free operation,
+		 to perform memset operation to zero deallocated memory space from this region.</p>
 	<h2>Example</h2>
 	<p>See <a href="fam_create_region.html#e1">fam_create_region</a></p>
 		</article>
