--- a/release_notes.html
+++ b/release_notes.html
@@ -96,7 +96,7 @@
 		<h1>OpenFAM release notes</h1>
 		These notes summarize the different releases of OpenFAM. A more detailed list of list of features, enhancements and bug fixes are added to the source tree in all the released versions,
 		and are provided in the corresponding NEWS.md file. Build and installation instructions are listed in the corresponding README.md file located in the source tree. 
-		<h2>OpenFAM version 2.0 (release 1)</h2>
+		<h2>OpenFAM version 2.0 (release v2.0.0)</h2>
 		<p>The current version of OpenFAM is 2.0. It contains the following changes and enhancements over version 1.0:</p>
 		<ul>
 			<li>Scalability improvements: This version supports a larger pool of memory by allowing multiple memory servers to be used. See <a href="services.html">services</a> for more details. </li>
@@ -118,7 +118,7 @@
 			</li>
 			<li>Exception and error handling was simplified. All OpenFAM APIs returns only one exception type on error, i.e, <code>Fam_Exception</code>.</li>
 		</ul>
-		<h2>OpenFAM version 1.0 (release 0.4)</h2>
+		<h2>OpenFAM version 1.0 (release v0.4.0)</h2>
 		<ul>
 				<li>Initial public release of OpenFAM reference implementation</li>
 				<li>Memory allocator models implemented: "Shared memory model" to be used on scale-up platforms and "Memory server model" to be used on scale-out (cluster) platforms.</li>
