--- a/fam_create_region.html
+++ b/fam_create_region.html
@@ -167,7 +167,7 @@
 		to align memory boundaries. Currently the maximum size of a region is
 		limited to 16 EiB by the API. See <a href="limitations.html">Design Choices</a> for the current design limits within the OpenFAM reference implementation.
 		</p>
-	<p>Fam_Region_Descriptor provides a method to retrieve an opaque read-only data structure called 
+	<p><code>Fam_Region_Descriptor</code> provides a method to retrieve an opaque read-only data structure called
 	<code>Fam_Global_Descriptor</code> which represents the region in FAM. <code>Fam_Global_Descriptor</code>
 	can be freely copied, and shared across processing nodes by the program, and is portable
 	across operating system and program instances.</p>
@@ -175,7 +175,7 @@
 // Fam_Global_Descriptor Fam_Region_Descriptor::get_global_descriptor();
 Fam_Global_Descriptor gDescriptor = regionDescriptor->get_global_descriptor();
 </pre>
-	<p>Fam_Region_Descriptor can be instantiated from Fam_Global_Descriptor using the following constructor.</p>
+	<p><code>Fam_Region_Descriptor</code> can be instantiated from <code>Fam_Global_Descriptor</code> using the following constructor.</p>
 <pre>
 // Fam_Region_Descriptor::Fam_Region_Descriptor(Fam_Global_Descriptor gDescriptor);
 Fam_Region_Descriptor *rd = new Fam_Region_Descriptor(gDescriptor);
@@ -209,7 +209,7 @@ int main(void) {
 		myFam->fam_destroy_region(rd);
 		printf("fam_destroy_region successful\n");
 	} catch (Fam_Exception &amp;e) {
-		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg()); 
+		printf("Create/Destroy region failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
 	}
 	
 	// ... finalization code here
